@@ -1,8 +1,8 @@
 package org.seasar.doma.jdbc.dialect;
 
 import java.sql.SQLException;
-import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.seasar.doma.DomaNullPointerException;
@@ -23,8 +23,8 @@ import org.seasar.doma.jdbc.SqlNode;
 public class MysqlDialect extends StandardDialect {
 
     /** the set of {@literal SQLState} code that represents unique violation */
-    protected static final Set<Integer> UNIQUE_CONSTRAINT_VIOLATION_ERROR_CODES = new HashSet<Integer>(
-            Arrays.asList(1022, 1062));
+    protected static final Set<Integer> UNIQUE_CONSTRAINT_VIOLATION_ERROR_CODES = new HashSet<>(
+            List.of(1022, 1062));
 
     /** the quotation mark of the start */
     protected static final char OPEN_QUOTE = '`';
@@ -158,14 +158,14 @@ public class MysqlDialect extends StandardDialect {
     public static class MysqlScriptBlockContext extends StandardScriptBlockContext {
 
         protected MysqlScriptBlockContext() {
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "procedure"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "function"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "trigger"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("alter", "procedure"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("alter", "function"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("alter", "trigger"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("declare"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("begin"));
+            sqlBlockStartKeywordsList.add(List.of("create", "procedure"));
+            sqlBlockStartKeywordsList.add(List.of("create", "function"));
+            sqlBlockStartKeywordsList.add(List.of("create", "trigger"));
+            sqlBlockStartKeywordsList.add(List.of("alter", "procedure"));
+            sqlBlockStartKeywordsList.add(List.of("alter", "function"));
+            sqlBlockStartKeywordsList.add(List.of("alter", "trigger"));
+            sqlBlockStartKeywordsList.add(List.of("declare"));
+            sqlBlockStartKeywordsList.add(List.of("begin"));
         }
     }
 
