@@ -9,15 +9,14 @@ import java.text.SimpleDateFormat;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 import org.seasar.doma.DomaNullPointerException;
 import org.seasar.doma.expr.ExpressionFunctions;
 import org.seasar.doma.internal.jdbc.dialect.OracleForUpdateTransformer;
 import org.seasar.doma.internal.jdbc.dialect.OraclePagingTransformer;
 import org.seasar.doma.internal.util.AssertionUtil;
-import org.seasar.doma.jdbc.InParameter;
 import org.seasar.doma.jdbc.JdbcMappingFunction;
 import org.seasar.doma.jdbc.JdbcMappingHint;
 import org.seasar.doma.jdbc.JdbcMappingVisitor;
@@ -124,7 +123,7 @@ public class Oracle11Dialect extends StandardDialect {
         }
         String rawSql = "select " + qualifiedSequenceName + ".nextval from dual";
         return new PreparedSql(SqlKind.SELECT, rawSql, rawSql, null,
-                Collections.<InParameter<?>> emptyList(), SqlLogType.FORMATTED);
+                Collections.emptyList(), SqlLogType.FORMATTED);
     }
 
     @Override
@@ -164,7 +163,7 @@ public class Oracle11Dialect extends StandardDialect {
 
     public static class OracleResultSetType extends AbstractResultSetType {
 
-        protected static int CURSOR = -10;
+        protected static final int CURSOR = -10;
 
         public OracleResultSetType() {
             super(CURSOR);
@@ -183,26 +182,26 @@ public class Oracle11Dialect extends StandardDialect {
     public static class Oracle11SqlLogFormattingVisitor extends StandardSqlLogFormattingVisitor {
 
         /** the formatter for {@link Date} */
-        protected DateFormatter dateFormatter = new DateFormatter();
+        protected final DateFormatter dateFormatter = new DateFormatter();
 
         /** the formatter for {@link Time} */
-        protected TimeFormatter timeFormatter = new TimeFormatter();
+        protected final TimeFormatter timeFormatter = new TimeFormatter();
 
         /** the formatter for {@link Timestamp} */
-        protected TimestampFormatter timestampFormatter = new TimestampFormatter();
+        protected final TimestampFormatter timestampFormatter = new TimestampFormatter();
 
         /** the formatter for {@link java.util.Date} */
-        protected UtilDateFormatter utilDateFormatter = new UtilDateFormatter();
+        protected final UtilDateFormatter utilDateFormatter = new UtilDateFormatter();
 
         /** the formatter for {@link LocalDate} */
-        protected LocalDateFormatter localDateFormatter = new LocalDateFormatter(dateFormatter);
+        protected final LocalDateFormatter localDateFormatter = new LocalDateFormatter(dateFormatter);
 
         /** the formatter for {@link LocalDateTime} */
-        protected LocalDateTimeFormatter localDateTimeFormatter = new LocalDateTimeFormatter(
+        protected final LocalDateTimeFormatter localDateTimeFormatter = new LocalDateTimeFormatter(
                 timestampFormatter);
 
         /** the formatter for {@link LocalTime} */
-        protected LocalTimeFormatter localTimeFormatter = new LocalTimeFormatter(timeFormatter);
+        protected final LocalTimeFormatter localTimeFormatter = new LocalTimeFormatter(timeFormatter);
 
         @Override
         public String visitBooleanWrapper(BooleanWrapper wrapper, SqlLogFormattingFunction p,
@@ -398,14 +397,14 @@ public class Oracle11Dialect extends StandardDialect {
     public static class Oracle11ScriptBlockContext extends StandardScriptBlockContext {
 
         protected Oracle11ScriptBlockContext() {
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "or", "replace", "procedure"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "or", "replace", "function"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "or", "replace", "triger"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "procedure"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "function"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("create", "trigger"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("declare"));
-            sqlBlockStartKeywordsList.add(Arrays.asList("begin"));
+            sqlBlockStartKeywordsList.add(List.of("create", "or", "replace", "procedure"));
+            sqlBlockStartKeywordsList.add(List.of("create", "or", "replace", "function"));
+            sqlBlockStartKeywordsList.add(List.of("create", "or", "replace", "triger"));
+            sqlBlockStartKeywordsList.add(List.of("create", "procedure"));
+            sqlBlockStartKeywordsList.add(List.of("create", "function"));
+            sqlBlockStartKeywordsList.add(List.of("create", "trigger"));
+            sqlBlockStartKeywordsList.add(List.of("declare"));
+            sqlBlockStartKeywordsList.add(List.of("begin"));
         }
     }
 
